--- a/15.redux-learn/package.json
+++ b/15.redux-learn/package.json
@@ -8,7 +8,8 @@
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.0",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
