--- a/16.webpack-source/package.json
+++ b/16.webpack-source/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "16.webpack-source",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "16.webpack-source",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"bin": {
+		"zf-pack": ".bin/zf-pack.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@babel/generator": "^7.5.5",
+		"@babel/traverse": "^7.5.5",
+		"@babel/types": "^7.5.5",
+		"babylon": "^6.18.0",
+		"ejs": "^2.7.1"
+	}
 }
