--- a/16.webpack-source/1.zf-pack/package.json
+++ b/16.webpack-source/1.zf-pack/package.json
@@ -17,6 +17,7 @@
 		"@babel/traverse": "^7.5.5",
 		"@babel/types": "^7.5.5",
 		"babylon": "^6.18.0",
-		"ejs": "^2.7.1"
+		"ejs": "^2.7.1",
+		"tapable": "^1.1.3"
 	}
 }
