--- a/16.webpack-source/2.zf-pack-demo/package.json
+++ b/16.webpack-source/2.zf-pack-demo/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "less": "^3.10.3"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "less": "^3.10.3",
+    "loader-utils": "^1.2.3",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8"
   }
 }
