--- a/16.webpack-source/2.zf-pack-demo/package.json
+++ b/16.webpack-source/2.zf-pack-demo/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.5.5",
     "less": "^3.10.3",
     "loader-utils": "^1.2.3",
+    "mime": "^2.4.4",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8"
   }
