--- a/33.ZFKT-TS/zfkt-front/package.json
+++ b/33.ZFKT-TS/zfkt-front/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"serve": "webpack-dev-server --config ./config/webpack.config.js",
-		"build" :"webpack --config ./config/webpack.config.js"
+		"build": "webpack --config ./config/webpack.config.js"
 	},
 	"keywords": [
 		"zfkt"
@@ -45,7 +45,15 @@
 		"@types/typescript": "^2.0.0",
 		"@types/webpack": "^4.39.3",
 		"@types/webpack-dev-server": "^3.1.7",
+		"@typescript-eslint/eslint-plugin": "^2.4.0",
+		"@typescript-eslint/parser": "^2.4.0",
 		"css-loader": "^3.2.0",
+		"eslint": "^6.5.1",
+		"eslint-config-airbnb": "^18.0.1",
+		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.16.0",
+		"eslint-plugin-react-hooks": "^1.7.0",
 		"file-loader": "^4.2.0",
 		"html-webpack-plugin": "^3.2.0",
 		"less": "^3.10.3",
