--- a/33.ZFKT-TS/zfkt-front/tsconfig.json
+++ b/33.ZFKT-TS/zfkt-front/tsconfig.json
@@ -9,7 +9,12 @@
     "outDir": "./dist", /* Redirect output structure to the directory. */
     "strict": true, /* Enable all strict type-checking options. */
     "noImplicitAny": true, /* Raise error on expressions and declarations with an implied 'any' type. */
-    // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+    "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+    "paths": {
+      "$types/*": [ "./src/typings/*" ],
+      "$component/*":["./src/component/*"],
+      "$actions/*":["./src/store/actions/*"],
+    }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     // "lib": [],                             /* Specify library files to be included in the compilation. */
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
@@ -42,9 +47,7 @@
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     
-    // "paths": {
-    //   "$types/*": [ "./src/typings/*" ]
-    // }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
