--- a/33.ZFKT-TS/zfkt-front/tsconfig.json
+++ b/33.ZFKT-TS/zfkt-front/tsconfig.json
@@ -15,6 +15,7 @@
       "$component/*":["./src/component/*"],
       "$actions/*":["./src/store/actions/*"],
       "$assets/*":["./public/*"],
+      "$utils/*":["./src/utils/*"],
     }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     // "lib": [],                             /* Specify library files to be included in the compilation. */
