--- a/31.vue-Tips/package.json
+++ b/31.vue-Tips/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.9.0"
   }
 }
