--- a/33.ZFKT-TS/zfkt-back/package.json
+++ b/33.ZFKT-TS/zfkt-back/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "zfkt-back",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.4"
-  }
+	"name": "zfkt-back",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"serve": "nodemon server.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@types/axios": "^0.14.0",
+		"@types/body-parser": "^1.17.1",
+		"@types/cors": "^2.8.6",
+		"@types/eslint": "^6.1.2",
+		"@types/express": "^4.17.1",
+		"@types/express-session": "^1.15.15",
+		"@types/mongoose": "^5.5.21",
+		"@types/nodemon": "^1.19.0",
+		"@types/typescript": "^2.0.0",
+		"axios": "^0.19.0",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"express-session": "^1.17.0",
+		"mongoose": "^5.7.5",
+		"typescript": "^3.6.4"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^2.4.0",
+		"@typescript-eslint/parser": "^2.4.0",
+		"eslint": "^6.5.1",
+		"eslint-config-airbnb-base": "^14.0.0",
+		"eslint-plugin-import": "^2.18.2",
+		"nodemon": "^1.19.4"
+	}
 }
